--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "express-session": "^1.17.0",
     "massive": "^6.2.0",
     "react": "^16.12.0",
+    "react-bootstrap-dropdown": "^0.3.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2"
   },
