--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "massive": "^6.2.0",
+    "nodemailer": "^6.4.2",
     "react": "^16.12.0",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-dom": "^16.12.0",
