--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-sdk": "^2.617.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
@@ -18,12 +19,15 @@
     "react": "^16.12.0",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-spinners": "^0.8.0",
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5",
-    "redux-promise-middleware": "^6.1.2"
+    "redux-promise-middleware": "^6.1.2",
+    "uuid": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
