--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "uuid": "^3.4.0"
   },
   "scripts": {
