--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-promise-middleware": "^6.1.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "sweetalert2": "^9.7.2",
     "uuid": "^3.4.0"
   },
   "scripts": {
