--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-spinners": "^0.8.0",
+    "react-stripe-checkout": "^2.6.3",
     "react-toast-notifications": "^2.4.0",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "stripe": "^8.20.0",
     "sweetalert2": "^9.7.2",
     "uuid": "^3.4.0"
   },
