ready  to present

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "server/index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "aws-sdk": "^2.617.0",
     "axios": "^0.19.2",
@@ -54,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^9.4.1"
   }
 }
